<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_dark"
    tools:context=".RegisterActivity">

    <EditText
        android:id="@+id/register_username_edittext"
        android:layout_width="255dp"
        android:layout_height="48dp"
        android:layout_marginTop="90dp"
        android:autofillHints=""
        android:backgroundTint="@color/gray_light"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/es_username"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/gray_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/register_password_edittextpassword"
        android:layout_width="255dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:autofillHints=""
        android:backgroundTint="@color/gray_light"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/es_password"
        android:inputType="textPassword"
        android:textColorHint="#ABABAB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_username_edittext" />

    <EditText
        android:id="@+id/register_confirm_password_edittextpassword"
        android:layout_width="255dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:autofillHints=""
        android:backgroundTint="@color/gray_light"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/es_confirm_password"
        android:inputType="textPassword"
        android:textColorHint="#ABABAB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_password_edittextpassword" />

    <ImageButton
        android:id="@+id/register_imageButton"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginBottom="80dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/es_login"
        android:onClick="register"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/ic_menu_send" />

    <Spinner
        android:id="@+id/register_spinner_lang"
        style="@style/Widget.AppCompat.Spinner.Underlined"
        android:layout_width="255dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/gray_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_confirm_password_edittextpassword" />

</androidx.constraintlayout.widget.ConstraintLayout>