<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_dark"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/login_username_edittext"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="92dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/es_username"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/gray_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/login_host_edittext"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="host"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/gray_light"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_password_edittextpassword" />

    <EditText
        android:id="@+id/login_password_edittextpassword"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="36dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/es_password"
        android:inputType="textPassword"
        android:textColorHint="#ABABAB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_username_edittext" />

    <ImageButton
        android:id="@+id/login_imageButton"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/es_login"
        android:onClick="tryConnection"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/login_register_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/ic_menu_send" />

    <TextView
        android:id="@+id/login_register_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="96dp"
        android:onClick="open_register"
        android:text="@string/es_register"
        android:textColor="@color/gray_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/login_error_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:onClick="open_register"
        android:text="@string/es_register"
        android:textColor="@color/red_error"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_password_edittextpassword" />

    <Button
        android:id="@+id/login_dev_button"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:onClick="activate_dev"
        android:text=";"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>